dnl Process this file with autoconf to produce a configure script.
AC_INIT(README)
dnl AM_INIT_AUTOMAKE

AC_CONFIG_SRCDIR(src/libcuecue/cuecue.c)

CFLAGS="$CFLAGS -Wall -ansi -pedantic -g -Os"
VERSION=0.2.1

PACKAGE="cuecue"

AC_SUBST(VERSION)
AC_SUBST(PACKAGE)


dnl Detect the canonical host and target build environment
AC_CANONICAL_SYSTEM

dnl Setup for automake
AM_INIT_AUTOMAKE(cuecue, $VERSION)

dnl Check for tools

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
dnl AM_PROG_LIBTOOL  (really slow with msys)

dnl Check for mp3
AC_ARG_ENABLE(mp3,
[  --enable-mp3               enable MP3 decoding via libmad [default=yes]],
              , enable_mp3=yes)
if test x$enable_mp3 = xyes; then
  LIBS="$LIBS -lmad"
  AC_DEFINE(USE_MP3)
fi

dnl Check for ogg
AC_ARG_ENABLE(ogg,
[  --enable-ogg               enable OGG decoding via libvorbis [default=yes]],
              , enable_ogg=yes)
if test x$enable_ogg = xyes; then
    XIPH_PATH_OGG
    XIPH_PATH_VORBIS
    CFLAGS="$CFLAGS $OGG_CFLAGS $VORBIS_CFLAGS"
    LIBS="$LIBS $VORBISFILE_LIBS $VORBIS_LIBS $OGG_LIBS"
    AC_DEFINE(USE_OGG)
fi

dnl Check for libFLAC
x="C__seekable_stream_decoder_process_single"
flcsym="FLA$x"
AC_ARG_ENABLE(flac,
[  --enable-flac              enable FLAC decoding via libFLAC [default=yes]],
              , enable_flac=yes)
if test x$enable_flac = xyes; then
  AM_PATH_LIBFLAC
   CFLAGS="$CFLAGS $LIBFLAC_CFLAGS"
   LIBS="$LIBS $LIBFLAC_LIBS"
   AC_DEFINE(USE_FLAC)
fi

dnl detect win32
case "$target" in
    *-*-cygwin* | *-*-mingw32*)
	echo "WIN32 resource linking (icon support)"
	win32=yes
        ;;
esac
AM_CONDITIONAL(WIN32, test x$win32 = xyes)




# Finally create all the generated files
dnl Important: Any directory that you want to be in the distcheck should
dnl            have a file listed here, so that configure generates the
dnl            subdirectories on the build target.
AC_OUTPUT([
Makefile
src/Makefile
src/libcuecue/Makefile
src/cuecue/Makefile
])
